@@ -1,5 +1,14 @@
 2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* flumotion/admin/gtk/adminwindow.py:
+	* flumotion/admin/gtk/componentlist.py:
+	  Instead of only removing locally added messages in the current
+	  admin client, make sure that all admin clients remove their
+	  locally added messages any time a component goes to sleeping.
+	  Thanks to Arek for the suggestion.
+
+2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* flumotion/component/base/baseadminnode.py:
 	  When there is a component UI error in a tab, say which tab.
 	  When the error is because the component's Node still uses glade_file
